@@ -8,6 +8,8 @@ BUG FIXES:
 	- Fix that expired zones stay expired after a server restart.
 	- Fix "xfrd_handle_ipc: bad mode" log errors when compiled 
 	  with --disable-bind8-stats.
+	- Fix #616: retry xfer for zones with no content after command.
+	- Fix char used as array index warnings on NetBSD.
 
 
 4.1.0
