@@ -658,7 +658,7 @@ b32_pton(const char *src, uint8_t *target, size_t tsize)
 		if(p+5 >= tsize*8)
 		       return -1;
 
-		if(isspace(ch))
+		if(isspace((unsigned char)ch))
 			continue;
 
 		if(ch >= '0' && ch <= '9')
@@ -690,13 +690,13 @@ strip_string(char *str)
 	char *start = str;
 	char *end = str + strlen(str) - 1;
 
-	while (isspace(*start))
+	while (isspace((unsigned char)*start))
 		++start;
 	if (start > end) {
 		/* Completely blank. */
 		str[0] = '\0';
 	} else {
-		while (isspace(*end))
+		while (isspace((unsigned char)*end))
 			--end;
 		*++end = '\0';
 
